fix bug for underlines on Safari and add in some more details on how the wiki works

--- a/styles/gyul.css
+++ b/styles/gyul.css
@@ -13,7 +13,7 @@ b { font-weight: 400; }
 p { margin-bottom: 1em; }
 li { margin: 0 0 1em 1em; }
 code { padding: .25em; background: #fff; font-family: monospace; }
-a { font-weight: 400; text-decoration: underline #45503B; }
+a { font-weight: 400; -webkit-text-decoration: underline #45503B; }
 
 a:hover,
 .tabs:hover {
